<resources>
    <string name="app_name">Cloud Mate</string>
    <string name="unknown_search">Sorry, it looks like the area you have tried searching for is unknown. +
                             Please try again by searching for a more known name of the location.</string>
    <string name="try_again">Try Again</string>
    <string name="location_icon">Location Icon</string>
    <string name="today_report">Today\'s Report</string>
    <string name="pick_location">Pick location</string>
    <string name="find_city">Find the city that you want to know the detailed weather info at this time</string>
    <string name="no_internet">No internet connection!</string>
    <string name="no_favourite">No favourite location added yet!</string>
    <string name="weather_icon">WeatherIcon</string>
    <string name="deleted_favourite">Delete Favourite</string>
    <string name="forecast_report">Forecast Report</string>
    <string name="next_forecast">Next forecast</string>
    <string name="temperature">temperature°</string>
</resources>