...
        textStyle = TextStyle(fontSize = 14.sp, color = Color.White, fontFamily = poppinsFamily),
        enabled = enabled,
        keyboardOptions = KeyboardOptions(keyboardType = keyBoardType, imeAction = imeAction),
        keyboardActions = onAction,
        modifier = Modifier
            .fillMaxWidth()
            .padding(bottom = 10.dp).testTag("Search Bar"),
        onValueChange = {
            valueState.value = it
        },
        placeholder = { Text(text = labelId, fontFamily = poppinsFamily, fontSize = 14.sp) },
        colors = TextFieldDefaults.textFieldColors(
            textColor = Color.White,
...
